OK3/wwwroot/css/custom.css
body {
    font-family: 'Viga', sans-serif;
    color: #ebebeb;
    background-color: #0a0a0a;
    scroll-behavior: smooth;
}

.nav-selected {
    color: #FFFFFF !important;
}

.navbar {
    text-transform: uppercase;
    font-weight: 600;
    
    background: linear-gradient(to top, rgba(10,10,10,0), rgba(10,10,10, 1));
  }

section#top {
    height: calc(100vh);
    z-index: -1;
}

.row {
    height: 100%;
}

@media (max-width:768px) {


    #introimg2, #languagesimg2, #graphyimg2, #contactimg2 {

        width: 100% !important;

    }

 }

#introimg {

    background-image: radial-gradient(transparent 50%, rgba(10,10,10)), url("/img/2198.jpg");
    filter: grayscale(100%);
    opacity: 0.3;
    background-repeat: no-repeat;
    background-size:contain;

}

#languagesimg {

    background-image: radial-gradient(transparent 50%, rgba(10,10,10)), url("/img/3293.jpg");
    filter: grayscale(100%);
    opacity: 0.6;
    background-repeat: no-repeat;
    background-size:contain;

}

#graphyimg {

    background-image: radial-gradient(transparent 50%, rgba(10,10,10)), url("/img/1650.jpg");
    filter: grayscale(100%);
    opacity: 0.3;
    background-repeat: no-repeat;
    background-size:contain;

}

#cclogo {

    background-image: radial-gradient(transparent 50%, rgba(10,10,10)), url("/img/cloudcraft.jpg");
    filter: grayscale(100%);
    opacity: 0.3;
    background-repeat: no-repeat;
    background-size:contain;

}

#hclogo {

    background-image: radial-gradient(transparent 50%, rgba(10,10,10)), url("/img/hclogo5.jpg");
    filter: grayscale(100%);
    opacity: 0.3;
    background-repeat: no-repeat;
    background-size:contain;

}

#vslogo {

    background-image: radial-gradient(transparent 50%, rgba(10,10,10)), url("/img/vedemo.jpg");
    filter: grayscale(100%);
    opacity: 0.3;
    background-repeat: no-repeat;
    background-size:contain;

}

#videoimg {

    background-image: radial-gradient(transparent 50%, rgba(10,10,10)), url("/img/roisin.jpg");
    filter: grayscale(100%);
    opacity: 0.3;
    background-repeat: no-repeat;
    background-size:contain;

}

#codeimg {

    background-image: radial-gradient(transparent 50%, rgba(10,10,10)), url("/img/setup.jpg");
    filter: grayscale(100%);
    opacity: 0.3;
    background-repeat: no-repeat;
    background-size:contain;

}

#contactimg {

    background-image: radial-gradient(transparent 50%, rgba(10,10,10)), url("/img/IMG_1511.JPG");
    filter: grayscale(100%);
    opacity: 0.3;
    background-repeat: no-repeat;
    background-size:contain;

}

#mklogo {

    background-image: url("/img/mklogo.jpg");
    filter: grayscale(100%);
    opacity: 0.3;
    background-repeat: no-repeat;
    background-size:contain;

}

#cslogo {

    background-image: url("/img/csrp.jpg");
    filter: grayscale(100%);
    opacity: 0.3;
    background-repeat: no-repeat;
    background-size:contain;

}

#introimg2 {

    filter: grayscale(100%);
    opacity: 0.3;
    width: 70%;
    margin-top: 5%;

}

#languagesimg2 {

    filter: grayscale(100%);
    opacity: 0.3;
    width: 70%;
    margin-top: 5%;

}

#graphyimg2 {

    filter: grayscale(100%);
    opacity: 0.4;
    width: 70%;
    margin-top: 5%;

}

#contactimg2 {

    filter: grayscale(100%);
    opacity: 0.4;
    width: 70%;
    margin-top: 5%;

}

.vertical {
    position: relative;
    top: 50%;
    transform: translateY(-50%) !important;
}

.title {
    font-weight: 400;
    letter-spacing: 35px;
    padding-left: 35px;
    text-align: center;
}

.subtitle {
    font-weight: 400;
    color: rgba(255,255,255,.5);
}

.sectiontitle {
    font-size: 0.9rem;
    color: rgba(255,255,255,.5);
}

#introcontent {
    padding-left: 4vw;
}

#languagescontent {
    padding-right: 4vw;
}

#graphycontent {
    padding-left: 4vw;
}

#cccontent {
    padding-right: 4vw;
}

#hccontent {
    padding-left: 4vw;
}

#mkcontent {
    padding-right: 4vw;
}

#vscontent {
    padding-left: 4vw;
}

#cscontent {
    padding-right: 4vw;
}

#videocontent {
    padding-left: 4vw;
}

#codecontent {
    padding-right: 4vw;
}

.sectioncontent {
    color: rgb(192, 192, 192);
    font-family: 'Maven Pro', 'sans-serif';
}

.row {
    padding-bottom: 10%;
}

.carouselimg {
    width: 100%;
    height: 50vh;
    filter: grayscale(100%);
    opacity: 0.3;
    object-fit: cover;
}

.modal.fade .modal-dialog { /*override bootstrap modal slide-in from top*/
    -webkit-transform: translate(0, -25%) !important;
    -ms-transform: translate(0, -25%) !important;
    transform: translate(0, -25%) !important;
    -webkit-transition: -webkit-transform 0.3s ease-out !important;
    -moz-transition: -moz-transform 0.3s ease-out !important;
    -o-transition: -o-transform 0.3s ease-out !important;
    transition: transform 0.3s ease-out !important;
  }
  

